# Pathtracing

./: .gitignore  BMP.h  CMakeLists.txt  Dockerfile  Objects.h  README.md  Sphere.h  build.sh  colors.h  constants.h  main  main.c  main.cpp  main.sh  materials.h  run_in_docker.sh  setup.sh  setup_venv.sh  to_png.py  utils.h  vec3.h
app/: denoiser.cpp  pathtracer.cpp
include/: bvh.h  camera.h  colors.h  constants.h  denoise.h  materials.h  medium.h  objects.h  objectunion.h  scene.h  utils.h  valuemap.h  vec3.h
maps/: getMap.py  world_roughness.map
python_utils/: filtering.py  get_map.py  to_png.py
scenes/: settings.json
scenes/example/: scene.json  settings.json
scenes/living_room/: denoising.json  scene.json  settings.json
src/: bvh.cpp  bvh.h  camera.cpp  camera.h  colors.h  constants.cpp  constants.h  denoise.cpp  denoise.h  main.cpp  materials.cpp  materials.h  medium.cpp  medium.h  objects.cpp  objects.h  objectunion.cpp  objectunion.h  scene.cpp  utils.cpp  utils.h  valuemap.cpp  valuemap.h  vec3.cpp  vec3.h
